# black-primer

./: .flake8  .mypy.ini  .pre-commit-config.yaml  LICENSE.txt  README.md  noxfile.py  pyproject.toml
.github/workflows/: ci.yaml
src/black_primer/: __init__.py  cli.py  lib.py
tests/: test_primer.py
